--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <meta name='description' content='Valentin Rivetti, Web Developer Official Website' />
+
     <title>Valentin Rivetti Web Developer</title>
+
+    <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <div id='root'></div>
     <script src='./index.js'></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, function(err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
+          });
+        });
+      }
+    </script>
   </body>
 </html>
